--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^3.4.1",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
@@ -31,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "expose-loader": "^0.7.5",
+    "jquery": "^3.4.1"
   }
 }
