--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-paginate": "^6.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.11",
     "reakit": "^1.0.0-beta.1"
   },
   "scripts": {
