--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "expose-loader": "^0.7.5",
     "jquery": "^3.4.1",
-    "json-loader": "^0.5.7"
+    "json-loader": "^0.5.7",
+    "react-hot-loader": "^4.9.0"
   }
 }
