--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "AquelaApp",
-  "version": "0.2.0",
+  "name": "ThatApp",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
