--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "reakit": "^1.0.0-beta.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
