--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ThatApp",
+  "name": "thatapp",
   "version": "0.4.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "reakit": "^1.0.0-beta.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "react-scripts start PORT=3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
