--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expose-loader": "^0.7.5",
     "jquery": "^3.4.1",
     "json-loader": "^0.5.7",
-    "react-hot-loader": "^4.9.0"
+    "react-hot-loader": "^4.9.0",
+    "typescript": "^3.7.2"
   }
 }
