--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage": "npm test && nyc report --reporter=text-lcov | coveralls"
+    "coverage": "react-scripts test && nyc report --reporter=text-lcov | coveralls"
   },
   "eslintConfig": {
     "extends": "react-app"
